--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </footer>
 </div>
 
-<script>
+<!-- <script>
     // Countdown logic for about a thousand years from now(17Sep2024).
     const countdownElement = document.getElementById('countdown');
     const launchDate = new Date("September 17, 3000 00:00:00").getTime();
@@ -81,6 +81,6 @@
     }
 
     const countdownInterval = setInterval(updateCountdown, 1000);
-</script>
+</script> -->
 </body>
 </html>
