Migrate to angular (#2)
angular 19

--- a/index.html
+++ b/index.html
@@ -1,58 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" data-beasties-container>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon - Yasin Cepnioglu</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 45em;
-            color: #333;
-        }
-        .container {
-            text-align: center;
-        }
-        h1 {
-            font-size: 4rem;
-            margin-bottom: 20px;
-        }
-        p {
-            font-size: 1.5rem;
-            margin-bottom: 20px;
-        }
-        footer {
-            margin-top: 40px;
-            font-size: 1rem;
-            color: #999;
-            position: absolute;
-            bottom: 1em;
-        }
-        .funny-message {
-            margin-top: 30px;
-            font-size: 1.2rem;
-            color: #888;
-        }
-    </style>
-</head>
+  <meta charset="UTF-8">
+  <title>Coming Soon - Yasin Cepnioglu</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<style>*{margin:0;padding:0;box-sizing:border-box}body{font-family:Arial,sans-serif;background-color:#f4f4f4;display:flex;justify-content:center;align-items:center;height:45em;color:#333}</style><link rel="stylesheet" href="styles-4DPPQ4RJ.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-4DPPQ4RJ.css"></noscript></head>
 <body>
-<div class="container">
-    <h1>Coming Soon</h1>
-    <p>Get ready for something amazing...</p>
-    <div class="funny-message">P.S. Don’t hold your breath. This may take a little while...</div>
-
-</div>
-<footer>
-    &copy; 2024 Yasin Cepnioglu. All rights reserved.
-</footer>
-</body>
+<app-root></app-root>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-EP6OPFQW.js" type="module"></script></body>
 </html>
+
